# turnip_text

./: .gitignore  Cargo.toml  Justfile  LICENSE-MIT  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yaml
examples/: 01_phdprop_textonly.ltxt  experiment.pytext  phdprop.py  phdprop.ttext  phdprop.ttxt  phdprop_bib_biblatex.bib  phdprop_bib_csl.json  phdprop_subfile_first_year_plan.ttext
notes/: anchors_and_counters.md  code_syntax.md  content_v_formatting.md  goals.md  labels.md  opinionated_text.md  pandoc.md  raw_string_syntax.md  structure_first_parsing.md  syntax.md
notes/analysis/: asciidoctor.md  latex.md  restructuredtext.md  sphinx.md
python/: turnip_text.pyi
python/dev/: generate_pandoc_typestub.py
python/other/: generate_pandoc_typestub.py
python/tests/: error_messages.txt  test_coercion.py  test_doc_manip.py  test_errors.py  test_rel_path.py  test_ttsource_encoding.py  test_typesafe_containers.py
python/turnip_text/: __init__.py  __init__.pyi  _native.pyi  build_system.py  env_plugins.py  env_setup.py  helpers.py  rust_types.pyi  system.py  turnip_text.pyi
python/turnip_text/cite/: db.py
python/turnip_text/cli/: __init__.py  __main__.py  default_setup.py
python/turnip_text/doc/: __init__.py  anchors.py  dfs.py  std_plugins.py  user_nodes.py
python/turnip_text/old_renderers/: __init__.py  dictify.py  std_plugins.py
python/turnip_text/old_renderers/latex/: __init__.py  plugins.py
python/turnip_text/plugins/: anchors.py
python/turnip_text/plugins/cites/: __init__.py  latex.py  markdown.py  pandoc.py
python/turnip_text/plugins/cites/bib_database/: __init__.py  bibtex.py  csl.py
python/turnip_text/plugins/doc_structure/: __init__.py  latex.py  markdown.py  pandoc.py
python/turnip_text/plugins/footnote/: __init__.py  latex.py  markdown.py  pandoc.py
python/turnip_text/plugins/inline_fmt/: __init__.py  latex.py  markdown.py  pandoc.py
python/turnip_text/plugins/list/: __init__.py  latex.py  markdown.py  pandoc.py
python/turnip_text/plugins/primitives/: __init__.py  latex.py  markdown.py  pandoc.py
python/turnip_text/plugins/subfile/: __init__.py  latex.py  markdown.py
python/turnip_text/plugins/url/: __init__.py  latex.py  markdown.py  pandoc.py
python/turnip_text/render/: __init__.py  build_system.py  counters.py  dyn_dispatch.py  manual_numbering.py
python/turnip_text/render/latex/: backrefs.py  counter_resolver.py  package_resolver.py  renderer.py  setup.py  std_plugins.py
python/turnip_text/render/markdown/: renderer.py  std_plugins.py
python/turnip_text/render/pandoc/: __init__.py  pandoc_types.py  pandoc_types.pyi  std_plugins.py
python/turnip_text/renderers/: __init__.py  dictify.py  labels.py  stateful.py  std_plugins.py
python/turnip_text/renderers/_wip/: labels.py
python/turnip_text/renderers/latex/: __init__.py  base.py  plugins.py
python/turnip_text/renderers/markdown/: __init__.py  base.py  plugins.py
src/: cli.rs  error.rs  error_feedback.rs  lexer.rs  lexer_charofs_row_col.rs  lib.rs  main.rs  parser.rs  tokens.rs  util.rs
src/error/: display.rs  interp.rs  lexer.rs  mod.rs  syntax.rs  user_python.rs
src/interpreter/: eval_bracket.rs  mod.rs  next.rs  para.rs
src/interpreter/error/: display.rs  mod.rs  syntax.rs  user_python.rs
src/interpreter/error/display/: annotate_snippets.rs  mod.rs
src/interpreter/lexer/: mod.rs
src/interpreter/python/: interop.rs  mod.rs  typeclass.rs
src/interpreter/state_machines/: ambiguous_scope.rs  block.rs  code.rs  comment.rs  inline.rs  mod.rs
src/interpreter/state_machines/block/: block_scope.rs  toplevel.rs
src/lexer/: line_col_char_posn.rs  mod.rs
src/parser/: lexer.rs  mod.rs  parser.rs  tests.rs
src/python/: error.rs  interop.rs  mod.rs  typeclass.rs  util.rs
src/python/interp/: eval_bracket.rs  mod.rs  para.rs
src/python/parse/: eval_bracket.rs  mod.rs  para.rs
src/tests/: helpers.rs  mod.rs  test_lexer.rs  test_lexer_parser.rs  test_parser.rs
src/tests/helpers/: python.rs
src/tests/test_parser/: basic.rs  block_scope_inline_error_context.rs  block_spacing.rs  code.rs  code_ambiguity.rs  code_builder_flexibility.rs  comments.rs  doc_structure.rs  inserted_files.rs  overflexibility.rs  paragraph.rs  recursion.rs  scope_ambiguity.rs  scope_flattening.rs  substitution.rs
tests/: tokenizer_tests.rs
