[package]
name = "turnip_text"
version = "0.0.3"
description = "Document description language that allows embedded Python to describe document structure"
license = "MIT OR Apache-2.0"
authors = ["Samuel Stark"]
edition = "2021"

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18.1", features = [
    "abi3-py38",
] } # Use abi3 for compatibility with Python 3.8+, we need dataclasses
lexer-rs = "0.0.2"
annotate-snippets = "0.9.1"
anyhow = "1.0.66"
thiserror = "1.0.37"
argh = "0.1.9"

# Compile with extension-module by default, but make it optional
# because 'cargo test' fails with link errors in that case.
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
