[package]
name = "turnip_text"
version = "0.0.5"
description = "Document description language that allows embedded Python to describe document structure"
license = "MIT OR Apache-2.0"
authors = ["Samuel Stark"]
edition = "2021"

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use abi3 for compatibility with Python 3.11+, we need dataclasses (python3.8) and simple .to_str() on PyString (python3.10)
# Used to require 3.11, haven't reduced the requirement yet
pyo3 = { version = "0.21.2", features = [
    "abi3-py311",
] }
lexer-rs = "0.0.2"
codespan-reporting = "0.11.1"
thiserror = "1.0.37"

[dev-dependencies]
regex = "1.9.5"
const_format = "0.2.32"

# Compile with extension-module by default, but make it optional
# because 'cargo test' fails with link errors in that case.
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
