[project]
# name, version, description, license are merged in from Cargo.toml
readme = "README.md"
authors = [{ name = "Samuel Stark", email = "popgoestoast@gmail.com" }]
requires-python = ">=3.8"

[project.optional-dependencies]
typing = ["mypy"]
fmt = ["black"]

[tool.maturin]
python-source = "python"

[tool.mypy]

[tool.black]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
