[project]
name = "turnip_text"
version = "0.0.1"
description = "Document description language that allows embedded Python to describe document structure"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = [{ name = "Samuel Stark", email = "popgoestoast@gmail.com" }]
requires-python = ">=3.8"

[project.optional-dependencies]
typing = ["mypy"]
fmt = ["black"]

[tool.maturin]
python-source = "python"

[tool.mypy]

[tool.black]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
