[project]
name = "turnip_text"
version = "0.0.5"
description = "Document description language that allows embedded Python to describe document structure"
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
authors = [{ name = "Samuel Stark", email = "popgoestoast@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "citeproc-py ~= 0.6.0",
    "bibtexparser == 1.4.0",
]


[project.optional-dependencies]
typing = ["mypy"]
fmt = ["black"]
test = ["pytest"]

[tool.maturin]
python-source = "python"
module-name = "turnip_text._native"

[tool.mypy]

[tool.black]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
